updated index file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
 
   <div class="winnertext hide">
-    <h1 id="heading1">CONGRATULATIONS ! THE WINNER IS </h1>
+    <h1 id="heading1">CONGRATULATIONS THE WINNER IS </h1>
   </div>
 
   <script src="main.js"></script>
