--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
     <div class="mix">
       <button id="playagain"><i class="fa-solid fa-repeat" style="margin-right: 6px;"></i>Play Again!</button>
-      <a href="https://www.linkedin.com/in/soumya-jain-263789301/"><button id = "devprof"> Developer Profile</button></a>
+      <a href="https://www.linkedin.com/in/soumya-jain-263789301/" id="anchor"><button id = "devprof"> Developer Profile</button></a>
     </div>
   
 
